--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   justify-content: center;
   height: 100vh;
   align-items: center;
+  transition: .4s;
 }
 
 .input {
@@ -28,10 +29,11 @@ body {
   position: absolute;
   left: 3px;
   animation: toggleOff .4s linear forwards;
+  transition: .4s;
 }
 
 .input:checked + .label {
-  background-color: rgb(0, 0, 0);
+  background-color: lightgrey;
 }
 
 .input:checked + .label .circle{
